RESOLVED FIXED101575
[Qt] Fix a crash in tst_QWebInspector::attachAndDestroy
https://bugs.webkit.org/show_bug.cgi?id=101575
Summary [Qt] Fix a crash in tst_QWebInspector::attachAndDestroy
Jocelyn Turcotte
Reported 2012-11-08 03:07:47 PST
[Qt] Fix a crash in tst_QWebInspector::attachAndDestroy
Attachments
Patch (1.99 KB, patch)
2012-11-08 03:27 PST, Jocelyn Turcotte
hausmann: review+
Jocelyn Turcotte
Comment 1 2012-11-08 03:27:12 PST
Allan Sandfeld Jensen
Comment 2 2012-11-08 08:03:01 PST
Even with r133899 landed that also tried to fix the same crash, I guess this patch is still needed. Otherwise the inspector would still be recreated and thereby leak?
Jocelyn Turcotte
Comment 3 2012-11-12 07:30:08 PST
Note You need to log in before you can comment on or make changes to this bug.